styles/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    height: 100%;
    position: relative;
}

body {
    font-family: 'Roboto', sans-serif;
    position: relative;
    background: #FAF9F6;
    height: 100%;
}

.container {
    width: 95%;
    margin: auto;
}

.block {
    border: 2px solid black;
    width: 150px;
    height: 150px;
}

.block.option {
    border: none;
}

.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 20px 0;
}

.options, .scores {
    display: flex;
    gap: 16px;

}

.options {
    margin: 16px;
}

.option {
    display: flex;
    justify-content: center;
}

.options .option .opt-btn {
    border: none;
    background: transparent;
}

.options .option img {
    width: 100px;
    height: auto;
    border: none;
    transition: all .2s ease-in-out;
    
}

.options .option img:hover {
    transform: scale(1.1);
    cursor: pointer;
}

.score-block {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.score-block .block {
    display: flex;
    justify-content: center;
}

.score-block .block.indy-score {
    height: fit-content;
    border-radius: 5px;
    margin: 16px 0;
    padding: 4px;
}

.winner-loser, .score-count, #title {
    margin-bottom: 16px;
}

.wl-output, .series-win, .user-score, 
.comp-score {
    font-size: 20px;
}

h2 {
    font-size: 26px;
}

h3 {
    font-size: 22px;
}

footer {
    background: #e6e6e6;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
}

.replay {
    display: none;
    justify-content: center;
}

.replay img, .creator img {
    width: 30px;
    height: fit-content;
    transition: all .2s ease-in-out;
}

.replay img:hover, .creator img:hover {
    transform: scale(1.1);
    cursor: pointer;
}

a {
    text-decoration: none;
}

